--- a/new-frontend/src/App.css
+++ b/new-frontend/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
